@@ -8,6 +8,7 @@ Supports helmets from the following mods:
 - 3d_armor
 - technic_armor
 - xtraarmor
+- amber
 
 ### Licensing:
 
@@ -44,6 +45,7 @@ Optional depends:
 - [default](https://github.com/minetest/minetest_game/blob/master/mods/default)
 - [technic_armor](https://github.com/stujones11/technic_armor)
 - [xtraarmor](https://forum.minetest.net/viewtopic.php?t=16645)
+- [amber](https://forum.minetest.net/viewtopic.php?t=18186)
 
 ### Links:
 
