@@ -6,3 +6,4 @@ v1.0
 - added light to helmets crafted from 3d_armor helmets
 - added light to helmets crafted from technic_armor helmets
 - added light to helmets crafted from xtraarmor helmets
+- added light to helmets crafted from amber helmets
